<resources>
    <!--Menu label-->
    <string name="app_name">Herb Reference Guide</string>
    <string name="note_label">My Notes</string>
    <string name="addNote_label">Adding Note</string>
    <string name="updateNote_label">Updating Note</string>
    <string name="camera_label">Camera</string>
    <string name="camera_title">My Camera</string>
    <string name="camera_gallery">My Plant Collection</string>

    <string name="description">Arcane Herbal Knowledge</string>
    <string name="herbs">Herbs</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="notes">Notes</string>
    <string name="imageContent">Herb Types</string>
    <string name="vectorFruit">Fruit type</string>
    <string name="vectorHerb">Herb type</string>
    <string name="vectorVegetable">Veggie type</string>
    <string name="vectorNote">Note type</string>

    <!--Plant sections-->
    <string name="item_name">%s</string>
    <string name="Herbs">Herbs</string>
    <string name="veggies">veggies</string>
    <string name="image_carrot">Carrot</string>
    <string name="plantItemTitle">%s</string>
    <string name="text_benefits">Health Benefits and Warning</string>
    <string name="benefitsDescription">%s</string>
    <string name="text_food">Food Suggestions</string>
    <string name="foodDescription">%s</string>
    <string name="text_nutrition">Nutritional Value</string>
    <string name="nutritionDescription">%s</string>

    <!-- Note sections   -->
    <string name="title_display">Title</string>
    <string name="description_display">Description</string>
    <string name="txtAddNote">Adding Note</string>
    <string name="noteAdd">Enter Title</string>
    <string name="descriptionAdd">Enter Description</string>
    <string name="btn_add">ADD</string>
    <string name="txtUpdateNote">Updating Note</string>
    <string name="titleUpdate">Update Title</string>
    <string name="descriptionUpdate">Update Description</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="btnDelete">DELETE</string>
    <string name="add_icon">Add</string>

    <!-- Camera section-->
    <string name="photoTaking">Photo Taking</string>
    <string name="photoViewing">Photo Viewing</string>
    <string name="photoFlipping">Photo Flipping</string>
    <string name="plantImage">Plant Images</string>
    <string name="checkBtn">Checked Button</string>
    <string name="snackBarLabel">Do you want to delete this photo</string>
    <string name="snackBarAction">DELETE</string>
    <string name="imageSizeWarning">There is no images in the storage</string>
</resources>