<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageBanner"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:contentDescription="@string/imageContent"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/txtBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/headland_one"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutHerbFruit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcHerbs"
            android:layout_width="150dp"
            android:layout_height="110dp"
            android:backgroundTint="@color/cream"
            app:cardElevation="5dp"
            app:rippleColor="@color/dark_cream">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/vectorHerb"
                android:src="@drawable/ic_herb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="serif-monospace"
                android:text="@string/herbs"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcFruits"
            android:layout_width="150dp"
            android:layout_height="110dp"
            android:backgroundTint="@color/cream"
            app:cardElevation="5dp"
            app:rippleColor="@color/dark_cream">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/vectorFruit"
                android:src="@drawable/ic_fruit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="serif-monospace"
                android:text="@string/fruits"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutVeggieNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcVegetables"
            android:layout_width="150dp"
            android:layout_height="110dp"
            android:backgroundTint="@color/cream"
            app:cardElevation="5dp"
            app:rippleColor="@color/dark_cream">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/vectorVegetable"
                android:src="@drawable/ic_veggie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="serif-monospace"
                android:text="@string/vegetables"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcNotes"
            android:layout_width="150dp"
            android:layout_height="110dp"
            android:backgroundTint="@color/cream"
            app:cardElevation="5dp"
            app:rippleColor="@color/dark_cream">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/vectorNote"
                android:src="@drawable/ic_note" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="serif-monospace"
                android:text="@string/notes"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</LinearLayout>