<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel"
    tools:context=".note.NoteUpdatingActivity">

    <TextView
        android:id="@+id/txtUpdatingNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/txtUpdateNote"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTitleUpdate"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:ems="10"
        android:text="@string/titleUpdate"
        android:inputType="text"
        android:padding="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtUpdatingNote" />

    <EditText
        android:id="@+id/edtDescriptionUpdate"
        android:layout_width="300dp"
        android:layout_height="290dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:text="@string/descriptionUpdate"
        android:inputType="textMultiLine"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="@+id/edtTitleUpdate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtTitleUpdate"
        app:layout_constraintTop_toBottomOf="@+id/edtTitleUpdate" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtDescriptionUpdate"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/edtDescriptionUpdate"
        app:layout_constraintTop_toBottomOf="@id/edtDescriptionUpdate"
        app:layout_constraintVertical_bias="0.291">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/teal_700"
            android:text="@string/btnUpdate"
            android:textStyle="bold"
            android:textColor="@color/white" />
        <Space
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/red"
            android:text="@string/btnDelete"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>